--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,3 +4,8 @@
 .registration-form{
     display: none;
 }
+
+.img-thumbnail {
+    width: 500px; /* Set the desired width */
+    height: 500px; /* Set the desired height */
+  }
