--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,11 +1,26 @@
 
 
-
-.registration-form{
-    display: none;
+.btn-link {
+  color: #fff;
+  text-decoration: none;
 }
+
+.btn-link:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
 
 .img-thumbnail {
     width: 500px; /* Set the desired width */
     height: 500px; /* Set the desired height */
   }
+
+  body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+footer{
+    margin-top: auto;
+}
